--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   ports:
    - 9090:9090
   depends_on:
-   mysql:
+   database:
     condition: service_healthy
   networks:
    - go-network
