--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
   ports:
    - 9090:9090
   depends_on:
-   database:
-    condition: service_healthy
+   - database
   networks:
    - go-network
 
