--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,9 @@ services:
    - dbdata:/var/lib/mysql
   environment:
    MYSQL_DATABASE: "db_pencatatan_keuangan"
-   MYSQL_USER: "root"
-   MYSQL_PASSWORD: "root"
-   MYSQL_ROOT_PASSWORD: "root"
+   MYSQL_USER: "test"
+   MYSQL_PASSWORD: "test"
+   MYSQL_ROOT_PASSWORD: "test"
    MYSQL_ROOT_HOST: "%"
   networks:
    - go-network
