--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,12 @@ services:
   image: go-api
   ports:
    - 9090:9090
-  env_file:
-   - .env
+  environment:
+   DB_HOST: database
+   DB_PORT: 3306
+   DB_USER: test
+   DB_PASSWORD: test
+   DB_NAME: db_pencatatan_keuangan
   depends_on:
    - database
   networks:
